--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+@font-face {
+  font-family: 'FiraCode';
+  src: local('FiraCode'), url(./fonts/FiraCode-VariableFont_wght.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Montserrat-Medium';
+  src: local('Montserrat-Medium'), url(./fonts/Montserrat-Medium.ttf) format('truetype');
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
